# zrpc

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: codegen.rs  lib.rs  options.rs
derive/tests/: trybuild.rs
derive/tests/fail/: trivia-method.rs  trivia-method.stderr
derive/tests/pass/: slice.rs  trivia-client.rs  trivia-method.rs  trivia.rs
examples/: enc.rs  minimal.rs
net/: Cargo.toml
net/src/: ipc.rs  lib.rs
src/: blob.rs  lib.rs  reqrep.rs  unsafe_impl.rs
