[package]
name = "zrpc"
version = "0.1.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
parity-tokio-ipc = { git = "http://github.com/nikvolf/parity-tokio-ipc", branch = "futures" }

[workspace]
 members = ["./", "derive"]