[package]
name = "zrpc-derive"
version = "0.1.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-crate = "0.1.4"

[dev-dependencies]
trybuild = "1.0"